<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="305sp"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="8sp">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:foreground="@drawable/edit_text_border"
        app:cardCornerRadius="10sp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="14sp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/light_coral"
                android:text="@string/enter_product_name" />

            <EditText
                android:id="@+id/productName"
                android:layout_width="match_parent"
                android:padding="4sp"
                android:layout_height="40sp"
                android:layout_marginTop="10sp"
                android:background="@drawable/edit_text_border_hard" />

            <TextView
                android:layout_width="match_parent"
                android:textColor="@color/light_coral"
                android:layout_height="wrap_content"
                android:layout_marginTop="20sp"
                android:text="@string/enter_product_price" />

            <EditText
                android:id="@+id/productPrice"
                android:padding="4sp"
                android:layout_width="match_parent"
                android:layout_marginTop="10sp"
                android:layout_height="40sp"
                android:background="@drawable/edit_text_border_hard"
                android:inputType="numberDecimal|numberSigned" />

            <TextView
                android:id="@+id/seekBarKgValue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10sp"
                android:gravity="center"
                android:textColor="@color/coral"
                android:textSize="24sp" />

            <androidx.appcompat.widget.AppCompatSeekBar
                android:id="@+id/seekBarKg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10sp"
                android:max="20"
                android:progress="1"
                android:progressTint="@color/melon"
                android:thumbTint="@color/dark_coral" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/addProductButton"
                android:layout_width="200sp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10sp"
                android:background="@drawable/border"
                android:text="@string/add_product"
                android:textColor="@color/white" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>